kubernetes/apps/monitoring/kube-prometheus-stack/app/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana
spec:
  parentRefs:
    - name: envoy-gateway-local
      namespace: network
      sectionName: https
  hostnames:
    - grafana.lab.egenintres.se
  rules:
    - backendRefs:
        - name: kube-prometheus-stack-grafana
          port: 80
